--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@nuxt/eslint": "^1.13.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^17.1.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
     "vue-tsc": "^3.2.4"
   }
 }
