--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "globals": "^17.1.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
+    "vite": "^7.3.1",
     "vue-tsc": "^3.2.4"
   }
 }
