--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@nuxt/eslint": "^1.13.0",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/ui": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "globals": "^17.1.0",
+    "jsdom": "^27.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
+    "vitest": "^4.0.18",
     "vue-tsc": "^3.2.4"
   }
 }
