--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.13.0",
     "@types/node": "^20",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/ui": "^4.0.18",
     "@vue/test-utils": "^2.4.6",
+    "eslint-plugin-vue": "^10.7.0",
     "happy-dom": "^20.4.0",
     "unplugin-auto-import": "^21.0.0",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
