--- a/.github/workflows/script-pipeline.yml
+++ b/.github/workflows/script-pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  hello-job:
+  pipeline-job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
