--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,28 @@
 name: Hello World
 
 on:
+  push:
+    branches:
+      - main
+      - lab4
+    paths-ignore:
+      - "docs/**"
+  pull_request:
+    branches:
+      - main
+      - lab4
+    paths-ignore:
+      - "docs/**"
   workflow_dispatch:
 
 jobs:
   hello:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Say Hello
         run: echo "Hello pipelines' world !"
-      
+
       - name: Display runner info
         run: |
           echo "Running on: $(uname -a)"
